<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/FRAGMENT_PLACEHOLDER">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/pie_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pie_chart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bar_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_graph" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bubble_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scatter_plot" />
    </LinearLayout>
</LinearLayout>